--- a/frontend/src/global_styles/openproject/_variables.scss
+++ b/frontend/src/global_styles/openproject/_variables.scss
@@ -183,6 +183,9 @@
   --button--active-font-color: #bbbbbb;
   --button--active-background-color: #eeeeee;
   --button--active-border-color: #cacaca;
+  --button--hello-world-background-color: #f542a4;
+  --button--hello-world-background-hover-color:salmon;
+  --button--hello-world-background-hover-color:pink;
   --button--alt-highlight-background-color: var(--alternative-color);
   --button--alt-highlight-background-hover-color: #227d28;
   --button--highlight-font-color: var(--font-color-on-primary);
